--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <<h1>FGOガチャ確率計算</h1>
       <form name="form1" id="id_form1" action="">
         <div>欲しい星5鯖の最大数</div>
-        <input name="textBox1" id="id_textBox1" type="text" value="10" placeholder="欲しい数"/><br>
+        <input name="textBox1" id="id_textBox1" type="text" value="1" /><br>
         <div>聖晶石の所持数</div>
-        <input name="textBox2" id="id_textBox2" type="text" value="" /><br>
+        <input name="textBox2" id="id_textBox2" type="text" value="120" /><br>
         <div>呼符の所持数</div>
-        <input name="textBox3" id="id_textBox3" type="text" value="" /><br>
+        <input name="textBox3" id="id_textBox3" type="text" value="10" /><br>
         <input type="button" value="全力で回してみる？" onclick="probability_calc();" />
       </form>
       <hr/>
