--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <<h1>FGOガチャ確率計算</h1>
       <form name="form1" id="id_form1" action="">
-        <div>欲しい星5鯖の最大数</div>
+        <div>欲しい星5鯖の数</div>
         <input name="textBox1" id="id_textBox1" type="text" value="1" /><br>
         <div>聖晶石の所持数</div>
         <input name="textBox2" id="id_textBox2" type="text" value="120" /><br>
